# advent-of-code-2024

./: Manifest.toml  Project.toml  README.md  pyproject.toml
aoc/day1/: README.md  code.py
aoc/day2/: code.py
src/: AdventOfCode.jl  day_01.jl  day_02.jl  day_03.jl  day_04.jl
