[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.0.1"
authors = [
    {name = "Matt Boler", email = "boler.matthew@gmail.com"},
]
description = "Python solutions to Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"

